src/styles/gameBoard.scss
@import 'variables';


.container__game-board {
    display: flex;
    flex-wrap: wrap-reverse;
    width: 100%;
    min-height: 100vh;

    .game-board__generated {
        width: 40%;
        padding: 40px;
        background: $lightGrey;

        @media (max-width: 1198px) {
            width: 100%;
            height: 20%;
        }

        @media (max-width: 768px) {
            padding: 20px;
        }

        .generated__item {@extend %draggableItem;}

        .disabled {
            background: $darkYellow;
            border: 3px solid $offsetDarkYellow;
            color: $offsetDarkYellow;
        }
    }

    .sandbox__container {
        width: 60%;
        min-width: 646px;
        display: flex;
        flex-direction: column;

        p {
            text-align: center;
            margin-bottom: 15px;
        }

        @media (max-width: 1198px) {
            width: 100%;
            min-height: 55vh;
            min-width: auto;
        }

        .main-header {
            @include headingType(calc(2.4rem + 0.96vw));
            text-align: center;
            margin: 40px 0 15px 0;
            text-align: center;

            @media (max-width: 940px) {
                display: none;
            }
        }

        .sandbox__buttons {
            align-self: flex-end;
            width: 100%;
            display: flex;
            justify-content: space-between;
            
            .main-button {
                @include mainButton(calc(1.5rem + 0.4vw), calc(46px + 1.19vw), 32%);
                margin: 0;

                &::after {
                    font-family: 'Font Awesome 5 Pro';
                    font-size: calc(1.8rem + 0.25vw);
                    position: relative;
                    left: 10px;
                    top: 2px;
                    content: '\f02e';
                }

                @media (max-width: 525px) {
                    height: 40px !important;
                    &::after{left: 4px;}
                }
            }

            .secondary-button {
                @include secondaryButton(calc(1.5rem + 0.4vw), calc(46px + 1.19vw), 32%);

                &::after {
                    font-family: 'Font Awesome 5 Pro';
                    font-size: calc(1.8rem + 0.25vw);
                    margin-left: 8px;
                    content: '\f55a';
                }    

                @media (max-width: 525px) {
                    height: 40px !important;
                    &::after{left: 2px;}
                }
            }
            
            button[style] { // override styles of a button with inline styles
                font-family: 'Kanit', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
                font-size: calc(1.5rem + 0.4vw) !important;
                //Max at 3rem for main-button
                font-weight: 400 !important;
                letter-spacing: 0.12rem !important;
                line-height: 1 !important;
                color: $lightGrey !important;
                height: calc(46px + 1.19vw) !important;
                width: 32% !important;
                min-width: calc(80px + 2.5vw) !important;
                background-color: #1DA1F2 !important;
                border: 2px solid transparent !important;
                cursor: pointer !important;
                transition: background-color 250ms ease !important;
                border-radius: 8px !important;
                
                &:hover {
                    background-color: lighten(#1DA1F2, 8%) !important;
                }    

                @media (max-width: 525px) {
                    height: 40px !important;
                }
            }
        }
    }

    .game-board__sandbox {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        width: 80%;
        height: 100%;
        margin: 0 auto;

        @media (max-width: 1198px) {
            height: 70%;
            flex-direction: column-reverse;
        }

        @media (max-width: 940px) {
            height: 65%;
        }

        @media (max-width: 768px) {
            width: 100%;
        }

        .sandbox__droppable {
            display: flex;
            flex-direction: column;
            align-items: center;
            max-width: 100%;
        }

        .generated__item {
            @extend %draggableItem;
            background: $offsetLightGreen;
            border: 3px solid $lightGreen;

            &:hover,
            &:focus {
                color: $darkGreen;
                @extend %draggableItem;
                background: $offsetLightGreen;
                border: 3px solid $lightGreen;
                box-shadow: 3px 3px 0 0 $darkGreen;
            }
        }
    }
}

